Alignment issues fixed

--- a/index.css
+++ b/index.css
@@ -7,13 +7,13 @@ body {
 button {
     font-size: 5em;
     background-color: transparent;
-    min-width: 30%;
+    min-width: 60px;
     border: transparent;
     color: #d37070;
 }
 input[type="range"] {
+    width: 100%;
     -webkit-appearance: none;
-    min-width: 100%;
     height: 30px;
     background: #ddd;
     outline: none;
@@ -21,6 +21,8 @@ input[type="range"] {
     border-radius: 2px;
     box-shadow: inset 0 0 5px #dc5e5e;
     margin-top: -5px;
+    border: 1px red solid;
+    margin-right: 15px;
 }
 
 input[type="range"]::-webkit-slider-thumb {
@@ -33,27 +35,22 @@ input[type="range"]::-webkit-slider-thumb {
     box-shadow: 0 0 5px #620a0a;
 }
 h1 {
-    color:#e3a5a5;
+    color: #e3a5a5;
     animation: pulse-glow 10s infinite;
     font-size: 4em;
     text-decoration: underline;
-    text-align:center;
+    text-align: center;
     margin-bottom: 80px;
 }
 img {
-    margin-left: 50px;
-    width: 150px;
     filter: invert(80%) hue-rotate(180deg);
     color: rgb(104, 104, 247);
-  }
-.logo {
-    width: 300px;
+    width: 150px;
 }
 .containersOne {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-
 }
 .containersTwo {
     display: flex;
@@ -67,13 +64,17 @@ img {
 .containerFive,
 .containerSix {
     display: flex;
+    width: 270px;
     flex-direction: column;
     justify-content: center;
-    width: 210px;
-    padding-right: 70px;
-    padding-left: 70px;
+    align-items: center;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding-right: 10px;
+    padding-left: 10px;
     padding-bottom: 40px;
     margin-top: -10px;
+    /*border: 1px red solid;*/
 }
 .controlOne,
 .controlTwo,
@@ -81,19 +82,58 @@ img {
 .controlFour,
 .controlFive,
 .controlSix {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-left: -30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    /*border: 1px white solid;*/
 }
+@media only screen and (max-width: 768px) {
+    .containerOne,
+    .containerTwo,
+    .containerThree,
+    .containerFour,
+    .containerFive,
+    .containerSix {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        padding-bottom: 40px;
+        margin-top: 0px;
+    }
+
+    .controlOne,
+    .controlTwo,
+    .controlThree,
+    .controlFour,
+    .controlFive,
+    .controlSix {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+    h1 {
+        color: #e3a5a5;
+        animation: pulse-glow 10s infinite;
+        font-size: 3em;
+        text-decoration: underline;
+        text-align: center;
+        margin-bottom: 80px;
+    }
+}
+
 @keyframes pulse-glow {
     0% {
-      text-shadow: none;
+        text-shadow: none;
     }
     50% {
-      text-shadow: 0 0 10px #d59494;
+        text-shadow: 0 0 10px #d59494;
     }
     100% {
-      text-shadow: none;
+        text-shadow: none;
     }
-  }
+}
+body::-webkit-scrollbar {
+    display: none;
+}
